# Munna_robot

./: .gitignore  README.md
munna_irl/: frames_2026-02-26_20.57.51.gv
munna_irl/install/: local_setup.sh  setup.sh
munna_irl/install/learning_tf2/lib/learning_tf2/: turtle_tf2_broadcaster  turtle_tf2_listener
munna_irl/install/learning_tf2/share/learning_tf2/: package.ps1  package.sh  package.xml
munna_irl/install/minisumo_robot/share/minisumo_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
munna_irl/install/minisumo_robot/share/minisumo_robot/config/: minisumo_params.yaml
munna_irl/install/minisumo_robot/share/minisumo_robot/launch/: minisumo.launch.py
munna_irl/install/munna_robot/share/munna_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
munna_irl/install/munna_robot/share/munna_robot/config/: munna_params.yaml
munna_irl/install/munna_robot/share/munna_robot/launch/: munna.launch.py
munna_irl/install/munna_teleop/lib/munna_teleop/: autonomous_node  mode_manager  teleop_node
munna_irl/install/munna_teleop/share/munna_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
munna_irl/install/munna_teleop/share/munna_teleop/launch/: munna_teleop.launch.py
munna_irl/log/: latest_build
munna_irl/src/munna_teleop/: package.xml  setup.py
munna_irl/src/munna_teleop/install/: local_setup.sh  setup.bash
munna_irl/src/munna_teleop/install/munna_teleop/share/munna_teleop/: package.sh
munna_irl/src/munna_teleop/log/: latest_build
munna_irl/src/munna_teleop/munna_teleop/: autonomous_node.py
munna_simu/src/modelo_robot/: package.xml  setup.py
munna_simu/src/modelo_robot/launch/: display.launch.py  gazebo.launch.py  munna_full.launch.py
munna_simu/src/modelo_robot/meshes/: base_link.STL  rueda_der.STL  rueda_izq.STL  sensor_der.STL  sensor_frontal.STL  sensor_izq.STL
munna_simu/src/modelo_robot/urdf/: uurdf_munna.urdf
munna_simu/src/munna_nodes/: package.xml  setup.cfg  setup.py
munna_simu/src/munna_nodes/munna_nodes/: autonomous_node.py  teleop_node.py
ros2_ws/: frames_2026-02-26_20.59.06.gv
ros2_ws/src/Relleno/learning_tf2/: setup.py
ros2_ws/src/Relleno/minisumo_robot/: setup.py
ros2_ws/src/Relleno/minisumo_robot/config/: firmware_esp32.ino
ros2_ws/src/Relleno/minisumo_robot/minisumo_robot/: teleop_node.py
ros2_ws/src/Relleno/munna_robot/: setup.py
ros2_ws/src/munna_teleop/: setup.cfg
ros2_ws/src/munna_teleop/install/: setup.ps1  setup.sh  setup.zsh
