<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>munna_teleop</name>
  <version>0.1.0</version>
  <description>Teleop de Munna con PS3 via micro-ROS</description>
  <maintainer email="[email protected]">marcela</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

